Ingress/k8s-ingress/pathbased.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress-path-based
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
    - secretName: portal-krushna-com-tls
      hosts:
        - portal.krushna.com
  rules:
    - host: portal.krushna.com
      http:
        paths:
          - path: /pythonapp/(.*)
            pathType: Prefix
            backend:
              service:
                name: pythonapp
                port:
                  number: 80
          - path: /dotnetapp/(.*)
            pathType: Prefix
            backend:
              service:
                name: dotnetapp
                port:
                  number: 80
          - path: /javaapp/(.*)
            pathType: Prefix
            backend:
              service:
                name: shuttle
                port:
                  number: 80
